--- a/package.json
+++ b/package.json
@@ -6,18 +6,15 @@
     "start:dev": "ts-node-dev --respawn src/index.ts"
   },
   "dependencies": {
+    "@prisma/client": "^2.0.0-beta.2",
     "bcryptjs": "^2.4.3",
-    "class-validator": "^0.12.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "helmet": "^3.22.0",
-    "jsonwebtoken": "^8.5.1",
-    "pg": "^8.0.2",
-    "reflect-metadata": "^0.1.13",
-    "sqlite3": "^4.1.1",
-    "typeorm": "^0.2.24"
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
+    "@prisma/cli": "^2.0.0-beta.2",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
