--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build-ts": "tsc",
     "postinstall": "npm run build-ts",
     "start": "npm run serve",
-    "serve": "node dist/index.js"
+    "serve": "node dist/index.js",
+    "start:dev": "ts-node src/index.ts"
   },
   "dependencies": {
     "@prisma/client": "^2.0.0-beta.2",
